# DiffuMon

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  scheduler.py  sinusoidal_pos_emb.py
notebooks/: diffumon_data.ipynb  diffumon_sampling.ipynb
src/diffumon/: __init__.py  cli.py  utils.py
src/diffumon/data/: downloader.py  image_dataset.py  transforms.py
src/diffumon/diffusion/: noiser.py  sampler.py  scheduler.py
src/diffumon/metrics/: plots.py
src/diffumon/models/: attention.py  helpers.py  positional_embed.py  resnet.py  unet.py
src/diffumon/trainers/: ddpm.py  ddpm_entrypoint.py  summary.py  train.py  training_loop.py
